--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: Herring Cove
 author: Herring Cove
-baseurl: /
+baseurl: 
 description: theme for jekyll
 github: http://www.github.com/arnp
 twitter: http://www.twitter.com/
