--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
-name: Herring Cove
-author: Herring Cove
+name: iGeek
+author: Silun Wang
 baseurl: 
-description: theme for jekyll
-github: http://www.github.com/arnp
+description: Silun Wang Homepage
+github: http://www.github.com/SilunWang
 twitter: http://www.twitter.com/
 facebook: http://www.facebook.com
 linkedin: http://www.linkedin.com
-email: rnpatel[at]me.com
+email: igeekwang[at]gmail.com
 location: 42°2'16"N   70°12'47"W
 disqus: diqus-username
 
